Scrollbar is forced to avoid jumping

--- a/css/general.css
+++ b/css/general.css
@@ -2,6 +2,12 @@
     font-family: 'Yeon Sung', cursive;
 }
 
+html {
+    overflow: -moz-scrollbars-vertical; 
+    overflow-y: scroll;
+}
+
+
 main{
     padding-top: 15vh;
     z-index: 1;
